--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ header.row.affix .social-info {
 }
 .social-info .social-icon li a {
   font: 15px/30px "Open Sans", sans-serif;
-  color: #c89551;
+  color: #fff;
 }
 .social-info .social-icon.contact-info {
   margin-left: 45px;
@@ -1032,6 +1032,9 @@ header.row.affix .social-info {
 .we-do-slider .we-sliders h4:hover, .we-do-slider .we-sliders h4:focus {
   color: #bc945e;
 }
+.product {
+    color: #000;
+}
 .we-do-slider .we-sliders p {
   font: 400 14px/26px "Open Sans", sans-serif;
   letter-spacing: 0.3px;
@@ -1588,7 +1591,7 @@ header.row.affix .social-info {
   margin-bottom: 13px;
 }
 @media (max-width: 991px) {
-  .latest-news-area .latest-content .latest .latest-news-text p {
+  .latest-news-area .latest-content .latest .latest-news- p {
     line-height: 22px;
     font-weight: 300;
   }
