--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ section.row, header.row, footer.row {
   width: 50px;
   height: 3px;
   display: inline-block;
-  background: #d7953e;
+  background: #034078;
   position: absolute;
   bottom: 0;
 }
@@ -383,7 +383,7 @@ header.row.affix .social-info {
   letter-spacing: 0.3px;
   text-transform: uppercase;
   text-shadow: none;
-  color: #d3c2ae;
+  color: #fff;
   padding: 0 13px;
   -webkit-transition: all 300ms linear 0s;
   transition: all 300ms linear 0s;
@@ -394,7 +394,7 @@ header.row.affix .social-info {
   }
 }
 .navbar-default .menu .navbar-collapse .navbar-nav li a:hover {
-  color: #c89551;
+  color: #ffcd22;
 }
 .navbar-default .menu .navbar-collapse .navbar-nav li a + ul {
   border: none;
@@ -506,7 +506,7 @@ header.row.affix .social-info {
   background: none;
   -webkit-box-shadow: none;
   box-shadow: none;
-  color: #c89551;
+  color: #fff;
 }
 .navbar-default .menu .navbar-collapse .navbar-nav li.active > a:before {
   display: block;
@@ -1366,7 +1366,7 @@ header.row.affix .social-info {
   }
 }
 .testimonial-sliders .owl-nav .owl-prev, .testimonial-sliders .owl-nav .owl-next {
-  background: #dcbf99;
+  background: #034078;
   width: 33px;
   text-align: center;
   font-size: 20px;
@@ -1377,7 +1377,7 @@ header.row.affix .social-info {
   transition: all 300ms linear 0s;
 }
 .testimonial-sliders .owl-nav .owl-prev:hover, .testimonial-sliders .owl-nav .owl-next:hover {
-  background: #bc945e;
+  background: #034078;
 }
 .testimonial-sliders .owl-prev {
   margin-right: 5px;
@@ -1468,7 +1468,7 @@ header.row.affix .social-info {
 .testimonial .media-body a {
   font: 300 14px/26px "Open Sans", sans-serif;
   letter-spacing: 0.3px;
-  color: #c89551;
+  color: #034078;
   font-style: italic;
   text-align: right;
   display: block;
@@ -1517,7 +1517,7 @@ header.row.affix .social-info {
   width: 62px;
   height: 76px;
   text-align: center;
-  background: #bc945e;
+  background: #034078;
   left: 0;
   bottom: 0;
 }
@@ -2170,7 +2170,7 @@ header.row.affix .social-info {
   width: calc(50% + 45px);
   float: left;
   position: relative;
-  background: #57371f;
+  background: #034078;
   height: 213px;
 }
 @media (max-width: 767px) {
@@ -2326,7 +2326,7 @@ header.row.affix .social-info {
   letter-spacing: 0.3px;
   color: #fff;
   display: inline-block;
-  border: 1px dashed #81654d;
+  border: 1px dashed #034078;
   padding: 12px 25px 10px;
   text-transform: uppercase;
   margin: 0;
@@ -2491,7 +2491,7 @@ header.row.affix .social-info {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
   padding-right: 12px;
-  color: #d7953e;
+  color: #034078;
 }
 
 .who-text-box {
@@ -2728,7 +2728,7 @@ header.row.affix .social-info {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  background: #9c683f;
+  background: #034078;
   text-align: center;
   line-height: 100px;
   position: absolute;
@@ -2785,8 +2785,8 @@ header.row.affix .social-info {
   }
 }
 .our-services .service-part .service-description:hover {
-  background: #9c683f;
-  border-color: #9c683f;
+  background: #034078;
+  border-color: #034078;
 }
 .our-services .service-part .service-description:hover h4 {
   color: #fff;
@@ -3963,7 +3963,7 @@ header.row.affix .social-info {
   border-radius: 20px;
 }
 .widget .widget-tag:hover {
-  background: #bc945e;
+  background: #034078;
   color: #fff;
 }
 .widget .widget-tag.active {
@@ -4770,8 +4770,8 @@ blockquote footer a {
   vertical-align: middle;
 }
 .touch .touch_bg .touch_top ul .item .media .media-left a {
-  color: #e1ba60;
-  border: 1px solid #e1ba60;
+  color: #034078;
+  border: 1px solid #034078;
   border-radius: 100%;
   display: block;
   width: 50px;
@@ -4802,7 +4802,7 @@ blockquote footer a {
   margin-bottom: 20px;
   border-radius: 0;
   font: 15px/31px "Open Sans", sans-serif;
-  color: #959595;
+  color: #ffcd22;
   padding: 11px 20px;
   border: 1px solid #e1e1e1;
   height: auto;
@@ -4886,8 +4886,8 @@ blockquote footer a {
   font-weight: 500;
   border: none;
   line-height: 32px;
-  background: #bc945e;
-  color: #000;
+  background: #034078;
+  color: #fff;
   text-transform: uppercase;
   margin-top: 8px;
   -webkit-box-shadow: none;
@@ -4905,7 +4905,7 @@ blockquote footer a {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #bb793c;
+  background: #3abaec;
   top: 0;
   left: 0;
   right: 0;
@@ -4920,8 +4920,8 @@ blockquote footer a {
   z-index: -1;
 }
 .submit:hover, .submit:focus {
-  color: #000;
-  border-color: #bb793c;
+  color: #fff;
+  border-color: #ffcd22;
 }
 .submit:hover:before, .submit:focus:before {
   -webkit-transform: scaleX(1);
@@ -4954,7 +4954,7 @@ footer.row .footer-top .footer-sidebar .widget {
 }
 footer.row .footer-top .footer-sidebar .widget .widget_title {
   font: 500 18px/17px "Open Sans", sans-serif;
-  color: #bc945e;
+  color: #fff;
   margin-top: 0px;
   text-transform: uppercase;
   margin-bottom: 24px;
@@ -4994,7 +4994,7 @@ footer.row .footer-top .footer-sidebar .widget.about-us-widget ul li a i {
 }
 footer.row .footer-top .footer-sidebar .widget.about-us-widget ul li a:hover {
   background: none;
-  color: #bc945e;
+  color: #00bfff;
 }
 footer.row .footer-top .footer-sidebar .widget.about-us-widget ul li:first-child {
   padding-left: 0px;
@@ -5024,7 +5024,7 @@ footer.row .footer-top .footer-sidebar .widget.widget-links .widget-contact-list
   padding-right: 12px;
 }
 footer.row .footer-top .footer-sidebar .widget.widget-links .widget-contact-list ul li a:hover {
-  color: #bc945e;
+  color: #3abaec;
 }
 @media (max-width: 767px) {
   footer.row .footer-top .footer-sidebar .widget.widget-contact {
@@ -5079,7 +5079,7 @@ footer.row .footer-top .footer-sidebar .widget.widget-contact ul li .fleft a {
   color: #7b7b7b;
 }
 footer.row .footer-top .footer-sidebar .widget.widget-contact ul li .fleft a:hover {
-  color: #bc945e;
+  color: #00bfff;
 }
 @media (max-width: 767px) {
   footer.row .footer-top .footer-sidebar .widget.widget-form {
@@ -5142,7 +5142,7 @@ footer.row .footer-bottom a {
   color: #424242;
 }
 footer.row .footer-bottom a:hover, footer.row .footer-bottom a:focus {
-  color: #bc945e;
+  color: #00bfff;
 }
 footer.row .footer-bottom .right {
   text-align: right;
